2006-10-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-dialog.h:
	More work on buttons for fast access to advrename template placeholders

2006-09-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	Added buttons for fast access to advrename template placeholders

2006-09-26  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-lexer.l:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-file.h:
	* src/gnome-cmd-tags-libs.c:
	* src/gnome-cmd-tags-libs.h:
	* src/gnome-cmd-tags.c:
	* src/gnome-cmd-tags.h:
	Added suddort for Exif and IPTC metatags in advrename

2006-09-17  Dušan Hokův  <dusan@mirc.cz>

	* src/*.c:
	Add missing '#include <config.h>'

2006-09-14  Dušan Hokův  <dusan@mirc.cz>

	* pixmaps/mime-icons/Makefile.am:
	* pixmaps/mime-icons/gnome-x-directory-smb-server.png:
	* pixmaps/mime-icons/gnome-x-directory-smb-workgroup.png:
	* src/gnome-cmd-dir.c:
	Icons for samba servers and workgroups

2006-09-01  Piotr Eljasiak  <epiotr@use.pl>

	* gnome-cmd-file-list.c:
        Set default sorting of size column to descending.

2006-08-30  Roma <romanr@ua.fm>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-main-win.c:
	* src/useractions.c:
	Save the window state across sessions.

2006-08-10  Dirk Göttel <dgoettel@freenet.de>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems.

2006-08-08  Piotr Eljasiak  <epiotr@use.pl>

	* *.h:
	Added C_BEGIN_DECLS and C_END_DECLS.

	* plugins/fileroller.c:
	Added support for archives via FileRoller.

	* pixmaps/Makefile.am:
	* src/gnome-cmd-main-menu.c:
	* src/gnome-cmd-pixmap.c:
	* src/imageloader.c:
	* src/imageloader.h:
	Remove excessive icons.

2006-08-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.c:
	Use GNOME stock items for menus.

2006-08-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.l: